test/extern/ferguson/mismatch-errors/mismatch-riv-i.good
mismatch-riv-i.chpl:4: error: extern proc does not match C declaration
